Bug 128166 - Presenter console has gone missing recent master
Summary: Presenter console has gone missing recent master
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Windows (All)
: medium major
Assignee: Michael Weghorn
URL:
Whiteboard: target:6.4.0
Keywords: bibisectRequest, regression
: 128365 (view as bug list)
Depends on:
Blocks: Presenter-Console
  Show dependency treegraph
 
Reported: 2019-10-16 05:11 UTC by V Stuart Foote
Modified: 2019-10-24 08:54 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2019-10-16 05:11:23 UTC
On Windows 10 Pro with
TB39
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 758516295e5f69393bd78bb4af6e7214d48ece0b
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

and
TB77
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 758516295e5f69393bd78bb4af6e7214d48ece0b
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

Dual headed system (4K 40" display 1, and HD 24" display 2) with and without OpenGL, with current master Impress Presenter Console is not launching for a presentation--Impress remain in Edit mode.

Verified Tools -> Options -> LibreOfficeDev Impress -> General tab's Presentation block has a check in 'Enable Presenter Console'

Same system running 64bit 6.2.5.2 build, Presenter Console opens as expected.
Comment 1 Julien Nabet 2019-10-16 14:30:05 UTC
On Win10 with master sources updated today, I could reproduce this.

I noticed these logs on console:
warn:legacy.tools:16904:18428:svx/source/form/fmshimp.cxx:1816: only to be used in alive mode
warn:legacy.osl:16904:18428:canvas/source/vcl/spritecanvas.cxx:87: VCLSpriteCanvas::initialize: wrong number of arguments, or wrong types
warn:vcl.opengl:16904:18428:vcl/opengl/win/gdiimpl.cxx:554: Render Target: Window: 1, Bitmap: 0
warn:vcl.opengl:16904:18428:vcl/opengl/win/gdiimpl.cxx:555: Supports OpenGL: 1
warn:legacy.osl:16904:18428:canvas/source/vcl/spritecanvas.cxx:87: VCLSpriteCanvas::initialize: wrong number of arguments, or wrong types
warn:legacy.osl:16904:18428:canvas/source/vcl/spritehelper.cxx:158: CanvasCustomSprite::redraw(): Mask bitmap is not monochrome (performance!)
warn:legacy.osl:16904:18428:canvas/source/vcl/spritecanvas.cxx:87: VCLSpriteCanvas::initialize: wrong number of arguments, or wrong types
warn:legacy.osl:16904:18428:canvas/source/vcl/spritecanvas.cxx:87: VCLSpriteCanvas::initialize: wrong number of arguments, or wrong types
warn:legacy.osl:16904:18428:canvas/source/vcl/spritecanvas.cxx:87: VCLSpriteCanvas::initialize: wrong number of arguments, or wrong types
warn:legacy.osl:16904:18428:canvas/source/vcl/spritecanvas.cxx:87: VCLSpriteCanvas::initialize: wrong number of arguments, or wrong types

Idem:
Verified Tools -> Options -> LibreOfficeDev Impress -> General tab's Presentation block has a check in 'Enable Presenter Console'
Comment 2 Julien Nabet 2019-10-17 09:04:17 UTC
Michael: noticing https://gerrit.libreoffice.org/#/c/80933, thought logs from https://bugs.documentfoundation.org/show_bug.cgi?id=128166#c1 may interest you
Comment 3 Julien Nabet 2019-10-17 09:17:46 UTC
V Stuart: it may be a regression due to https://cgit.freedesktop.org/libreoffice/core/commit/?id=5926b22b5dc33490d23d594b129eb8a70b94ffb0
Comment 4 Commit Notification 2019-10-17 09:54:50 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6855e41d308e14bc207d84953ff6df7e4c842434

tdf#128166 sd: Fix canvas initialization args

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Weghorn 2019-10-17 09:57:03 UTC
(In reply to Julien Nabet from comment #2)
> Michael: noticing https://gerrit.libreoffice.org/#/c/80933, thought logs
> from https://bugs.documentfoundation.org/show_bug.cgi?id=128166#c1 may
> interest you

Thanks!
Indeed, I quickly verified with gtk3 VCL plugin that presenter console is not working without that Gerrit patch, but works again fine with it.
Comment 6 Julien Nabet 2019-10-17 12:35:32 UTC
(In reply to Michael Weghorn from comment #5)
> (In reply to Julien Nabet from comment #2)
> > Michael: noticing https://gerrit.libreoffice.org/#/c/80933, thought logs
> > from https://bugs.documentfoundation.org/show_bug.cgi?id=128166#c1 may
> > interest you
> 
> Thanks!
> Indeed, I quickly verified with gtk3 VCL plugin that presenter console is
> not working without that Gerrit patch, but works again fine with it.

"YOU" are the one to thank since you fixed this :-)
Comment 7 Julien Nabet 2019-10-17 13:37:38 UTC
On Win10 with master sources updated today (9d04e52257ea85c16d21ca78bebb3fb13fe99c60), I confirm I don't reproduce this anymore!
Comment 8 Xisco Faulí 2019-10-23 10:29:54 UTC
(In reply to Julien Nabet from comment #7)
> On Win10 with master sources updated today
> (9d04e52257ea85c16d21ca78bebb3fb13fe99c60), I confirm I don't reproduce this
> anymore!

Thanks for checking.
Setting to VERIFIED
Comment 9 Xisco Faulí 2019-10-24 08:54:38 UTC
*** Bug 128365 has been marked as a duplicate of this bug. ***