tdf#128166 sd: Fix canvas initialization args

Commit 5926b22b5dc33490d23d594b129eb8a70b94ffb0
("The SystemEnvData passed into the canvas factories appears to
be unused") removed previous arg at index 1, so adapt here, too.

This makes the presenter console shown again (tdf#128166).
A visible result of FullScreenPane::CreateCanvas passing wrong
args was that an Impress presentation shown in presentation mode
in dual screen using the qt5/kf5 VCL plugin wouldn't terminate
properly and crash Impress on close.

Change-Id: I3933864d4bb007cfdefb0a20378ff3d75ea6cd85